# LuGo_v2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
lib/: libhat.lib
src/Internal/: Main.cpp
src/Internal/Analysis/Dissassembler/: AsmInstruction.hpp  AsmInstructionList.cpp  AsmInstructionList.hpp  AsmOperand.hpp  Dissassembler.cpp  Dissassembler.hpp
src/Internal/Analysis/Offsets/: OffsetManager.hpp  PointerObfuscation.hpp
src/Internal/Analysis/Offsets/Scanners/: Scanners.cpp  Scanners.hpp
src/Internal/Analysis/RTTI/: RTTIManager.hpp
src/Internal/Common/: Attributes.hpp
src/Internal/Execution/RBXHooks/: RBXHooks.cpp  RBXHooks.hpp
src/Internal/Execution/Scheduling/: RobloxJob.hpp  Scheduler.cpp  Scheduler.hpp
src/Internal/IO/: Logger.cpp  Logger.hpp
src/Internal/Logger/: Logger.cpp  Logger.hpp
src/Internal/RBX/: DataModel.cpp  DataModel.hpp  ScriptContext.cpp  ScriptContext.hpp  TaskScheduler.hpp
